<resources>
    <string name="app_name">MvpGoodPractice</string>

    <!--Fonts-->
    <string name="roboto_black">sans-serif-black</string>
    <string name="roboto_thin">sans-serif-thin</string>
    <string name="roboto_medium">sans-serif-medium</string>
    <string name="roboto_regular">sans-serif</string>
    <string name="roboto_light">sans-serif-light</string>
    <string name="roboto_condensed">sans-serif-condensed</string>

    <string name="myCustomFontBold">PTBebasNeueRegular</string>
    <string name="email_input_error">Введите email адрес в правильном формате: email@example.com</string>
    <string name="password_input_error">Длина пароля минимум 8 символов</string>
    <string name="unknown_error">Произошла неизвестная ошибка</string>
    <string name="catalog_loading_message">Подождите пока загружается каталог</string>
    <string name="catalog_loaded_message">Каталог успешно загружен</string>
    <string name="user_authenticating_message">Авторизуемся на сервере, подождите...</string>
    <string name="email_or_password_wrong_format">Email или пароль не правильного формата</string>
    <string name="authentificate_successful">Вход успешный</string>
    <string name="error_network_failure">Подключение к интернету отсутствует</string>
    <string name="open_drawer">open</string>
    <string name="close_drawer">close</string>
    <string name="account_name">Архипов Павел</string>
    <string name="add_address">Добавить адрес</string>
    <string name="error_message">Ошибка загрузки файла</string>
    <string name="account_removing">Удаление</string>
    <string name="account_editing">Редактирование</string>
    <string name="account_remove_address_confirm">Вы уверены, что хотите удалить адрес из списка?</string>
    <string name="account_yes">Да</string>
    <string name="account_ok">OK</string>
    <string name="account_cancel">Отмена</string>
    <string name="address_delivery_location">Название места доставки</string>
    <string name="comment_add_field">Напишите здесь свой комментарий</string>
    <string name="address_street">Улица</string>
    <string name="address_home">Дом</string>
    <string name="address_apartment">Квартира</string>
    <string name="address_floor">Этаж</string>
    <string name="address_comment">Комментарий:</string>
    <string name="account_remove">Удалить</string>
    <string name="account_edit">Редактировать</string>
    <string name="address_add_address">Добавить адрес</string>
    <string name="detail_about_product">О товаре</string>
    <string name="detail_count">Количество</string>
    <string name="detail_price">Стоимость</string>
    <string name="detail_description">Описание</string>
    <string name="detail_comment">Комментарии</string>
    <string name="internet_is_not_defined">Проверьте подключение к интернету</string>
    <string name="busket">Корзина</string>
    <string name="add_address_to_account">Добавление адреса</string>
    <string name="edit_address_to_account">Редактирование адреса</string>

    <!-- FavoriteScreen -->
    <string name="favorite_title">Избранное</string>
    <string name="favorite_price_mask">%d.-</string>
    <string name="favorite_removing_dialog_title">Удаление из избранного</string>
    <string name="favorite_removing_dialog_message">Вы уверены, что хотите удалить &lt;b>%s&lt;/b> из избранного?</string>
    <string name="favorite_removing_dialog_yes">Да</string>
    <string name="favorite_removing_dialog_no">Нет</string>

    <!-- CartScreen -->
    <string name="cart_product_amount">Количество товара:</string>
    <string name="cart_discount">Скидка:</string>
    <string name="cart_total">Итого:</string>
    <string name="cart_submit_order">Оформить заказ</string>
    <string name="cart_item_remove">Удалить</string>
    <string name="cart_item_price">Цена:</string>
    <string name="cart_item_amount">Количество:</string>
    <string name="cart_item_subtotal">Стоимость:</string>
    <string name="title_auth">Авторизация</string>

    <!--VkAuth -->
    <integer name="com_vk_sdk_AppId">5959707</integer>
    <string name="facebook_app_id">119971805209705</string>
</resources>
