<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="8dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="240dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/product_image"
                android:layout_width="140dp"
                android:layout_height="193dp"
                tools:src="@drawable/account_avatar"
                tools:layout_editor_absoluteX="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp" />

            <TextView
                android:textColor="@color/grey_dark"
                android:id="@+id/product_name"
                style="@style/CustomText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@+id/product_image"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Product name"/>

            <TextView
                android:id="@+id/product_description"
                style="@style/CustomText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toRightOf="@+id/product_image"
                app:layout_constraintTop_toBottomOf="@+id/product_name"
                tools:text="Good stuff!!!"/>

            <TextView
                android:id="@+id/price"
                style="@style/CustomText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/cart_item_price"
                app:layout_constraintLeft_toRightOf="@+id/product_image"
                app:layout_constraintTop_toBottomOf="@+id/product_description"
                app:layout_constraintRight_toLeftOf="@+id/price_value"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintHorizontal_bias="0.0"/>

            <TextView
                android:id="@+id/quantity"
                style="@style/CustomText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/cart_item_amount"
                app:layout_constraintLeft_toRightOf="@+id/product_image"
                app:layout_constraintTop_toBottomOf="@+id/price"
                app:layout_constraintRight_toLeftOf="@+id/quantity_value"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintHorizontal_bias="0.0"/>

            <TextView

                android:id="@+id/subtotal"
                style="@style/CustomText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/cart_item_subtotal"
                app:layout_constraintLeft_toRightOf="@+id/product_image"
                app:layout_constraintTop_toBottomOf="@+id/quantity"
                app:layout_constraintRight_toLeftOf="@+id/subtotal_value"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintHorizontal_bias="0.0"/>

            <TextView
                android:textColor="@color/grey_dark"
                android:id="@+id/price_value"
                style="@style/CustomText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/product_description"
                tools:text="3050.-"/>

            <TextView
                android:textColor="@color/grey_dark"
                android:id="@+id/quantity_value"
                style="@style/CustomText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/price_value"
                tools:text="2 шт."/>

            <TextView
                android:textColor="@color/grey_dark"
                android:id="@+id/subtotal_value"
                style="@style/CustomText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/quantity_value"
                tools:text="6100.-"/>

            <Button
                android:id="@+id/remove_button"
                style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/cart_item_remove"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/product_image"
                app:layout_constraintTop_toBottomOf="@+id/subtotal"
                android:layout_marginBottom="0dp"
                app:layout_constraintVertical_bias="0.0" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>